# tokimo-app-book

./: .gitignore  Cargo.toml  tokimo-app.toml
.github/workflows/: ci.yml
migrations/: 20260528000001__init.up.sql  20260528000002__expand_schema.up.sql  20260528000003__reorder_and_task_progress.up.sql
src/: app_server.rs  assets.rs  cli.rs  ctx.rs  error.rs  lib.rs  main.rs  mod.rs  router.rs
src/bus_clients/: app_events.rs  mod.rs  vfs.rs
src/db/: mod.rs
src/db/entities/: book_sync_status.rs  chapters.rs  containers.rs  download_tasks.rs  items.rs  mod.rs  novel_chapters.rs  novel_collections.rs  novel_files.rs  novel_genres.rs  novel_items.rs  novel_tags.rs  novel_volumes.rs  novels.rs
src/db/models/: novel.rs
src/db/repos/: book_sync_status_repo.rs  chapters_repo.rs  containers_repo.rs  download_tasks_repo.rs  items_repo.rs  mod.rs  novel_repo.rs
src/handlers/: browse.rs  crud.rs  download.rs  mod.rs  novel.rs  sync.rs
src/queue/handlers/: novel_scrape.rs
src/router/: novel.rs
src/services/scrape/: book.rs  mod.rs
ui/: package.json  pnpm-lock.yaml  tsconfig.json
ui/src/: index.tsx  manifest.ts  modal-bridge.ts
ui/src/api/: index.ts
ui/src/apps/settings/admin/: NovelSettingsPage.tsx
ui/src/apps/settings/user/: NovelReaderSettingsPanel.tsx
ui/src/apps/viewers/book/: EpubViewer.tsx  manifest.ts
ui/src/apps/viewers/novel/: NovelViewer.tsx  manifest.ts
ui/src/components/: AppIcon.tsx  BookApp.tsx  BookDownloadModal.tsx  BookDownloadModalWindow.tsx  BookLibraryEditor.tsx  BookLibraryEditorWindow.tsx  BookMenuBar.tsx  BookSidebar.tsx  NovelApp.tsx  NovelDownloadModal.tsx  NovelMenuBar.tsx  NovelSidebar.tsx  VfsBrowserWindow.tsx
ui/src/components/dashboard/: NovelDownloadModal.tsx  NovelDownloadPanel.tsx  NovelDownloadPopover.tsx
ui/src/components/window-manager/: NovelReaderContent.tsx
ui/src/hooks/: BookDownloadContext.tsx  NovelDownloadContext.tsx  useLibraryItemProgress.ts  useVfsBrowse.ts
ui/src/i18n/: index.ts
ui/src/pages/: BookAppPage.tsx  BookDetailPage.tsx  NovelAppPage.tsx  NovelDetailPage.tsx  NovelLibraryPage.tsx  NovelReaderPage.tsx
ui/src/pages/search/: NovelSearchSection.tsx
ui/src/shared/: browse-bridge.ts
ui/src/types/: index.ts
ui/src/utils/: index.ts
ui/src/viewer/novel/: NovelViewer.tsx
(+1 files in other folders)
