[package]
name        = "tokimo-app-book"
version     = "0.1.0"
edition     = "2024"
rust-version = "1.94.0"
license     = "MIT OR Apache-2.0"
description = "Tokimo book app — standalone multi-process book library."

[dependencies]
tokimo-bus-client   = { git = "https://github.com/tokimo-lab/tokimo-bus.git", rev = "80063cb4391c5249df9cd3b570b1eabed64c3843" }
tokimo-bus-protocol = { git = "https://github.com/tokimo-lab/tokimo-bus.git", rev = "80063cb4391c5249df9cd3b570b1eabed64c3843", features = ["axum"] }
tokimo-bus-auth     = { git = "https://github.com/tokimo-lab/tokimo-bus.git", rev = "80063cb4391c5249df9cd3b570b1eabed64c3843", features = ["axum", "cli-db"] }
tokimo-bus-cli      = { git = "https://github.com/tokimo-lab/tokimo-bus.git", rev = "80063cb4391c5249df9cd3b570b1eabed64c3843" }

clap              = { version = "4", features = ["derive", "env"] }
tokio             = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal", "sync"] }
tokio-stream      = "0.1"
tracing           = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
uuid              = { version = "1", features = ["v4", "serde"] }
rust-embed        = { version = "8", features = ["debug-embed"] }
mime_guess        = "2"
anyhow            = "1"
axum              = { version = "0.8", features = ["json"] }
sea-orm           = { version = "2.0.0-rc.38", default-features = false, features = ["sqlx-postgres", "runtime-tokio-rustls", "with-uuid", "with-chrono", "with-json", "macros"] }
chrono            = { version = "0.4", features = ["serde"] }
urlencoding       = "2"
novel-downloader = { path = "../../packages/novel-downloader-rs" }
bookfinder       = { path = "../../packages/bookfinder" }
tokimo-vfs       = { path = "../../packages/tokimo-package-vfs/packages/fs" }
futures-util     = "0.3"
async-stream     = "0.3"
regex            = "1"
zip              = { version = "2", default-features = false, features = ["deflate"] }
quick-xml        = "0.36"
lopdf            = "0.38"
sha2             = "0.10"

[lints]
workspace = true

[profile.release]
lto       = "thin"
opt-level = 3
strip     = "symbols"
